--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -18,3 +18,17 @@ jobs:
 
             - name: Set up docker Buildx
               uses: docker/setup-buildx-action@v3
+            
+            - name: Log in to DockerHub
+              uses: docker/login-action@v3
+              with:
+                username: ${{ secrets.DOCKERHUB_USERNAME }}
+                password: ${{ secrets.DOCKERHUB_TOKEN }}
+        
+            - name: Build and push
+              uses: docker/build-push-actions@v6
+              with:
+                context: .
+                file: ./Dockerfile
+                push: true
+                tags: comnyang/dashboard:latest
