--- a/dspm_dashboard/nginx.conf
+++ b/dspm_dashboard/nginx.conf
@@ -6,4 +6,10 @@ server {
         index  index.html;
         try_files $uri /index.html;
     }
+
+    location /dashboard/ {
+        root   /usr/share/nginx/html;
+        index  index.html;
+        try_files $uri /index.html;
+    }
 }
