--- a/dspm_dashboard/nginx.conf
+++ b/dspm_dashboard/nginx.conf
@@ -12,4 +12,9 @@ server {
         index  index.html;
         try_files $uri /index.html;
     }
+
+    location /dashboard/static {
+        root   /usr/share/nginx/html;
+        try_files $uri /index.html;
+    }
 }
