--- a/dspm_dashboard/nginx.conf
+++ b/dspm_dashboard/nginx.conf
@@ -2,19 +2,19 @@ server {
     listen 80;
 
     location /dashboard {
-        root   /usr/share/nginx/html;
-        index  index.html;
+        alias /usr/share/nginx/html;
+        index index.html;
         try_files $uri /index.html;
     }
 
     location /dashboard/ {
-        root   /usr/share/nginx/html;
-        index  index.html;
+        alias /usr/share/nginx/html;
+        index index.html;
         try_files $uri /index.html;
     }
 
     location /dashboard/static {
-        root   /usr/share/nginx/html;
+        alias /usr/share/nginx/html/static;
         try_files $uri /index.html;
     }
 }
