--- a/dspm_dashboard/nginx.conf
+++ b/dspm_dashboard/nginx.conf
@@ -15,6 +15,8 @@ server {
 
     location /dashboard/static {
         alias /usr/share/nginx/html/static;
-        try_files $uri /index.html;
+        expires 1y;
+        access_log off;
+        add_header Cache-Control "public";
     }
 }
