--- a/dspm_dashboard/nginx.conf
+++ b/dspm_dashboard/nginx.conf
@@ -1,20 +1,14 @@
 server {
     listen 80;
 
-    location /dashboard {
-        alias /usr/share/nginx/html;
+    location / {
+        root /usr/share/nginx/html;
         index index.html;
         try_files $uri /index.html;
     }
 
-    location /dashboard/ {
-        alias /usr/share/nginx/html;
-        index index.html;
-        try_files $uri /index.html;
-    }
-
-    location /dashboard/static {
-        alias /usr/share/nginx/html/static;
+    location /static {
+        root /usr/share/nginx/html;
         expires 1y;
         access_log off;
         add_header Cache-Control "public";
