--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -32,3 +32,20 @@ jobs:
                 file: ./dspm_dashboard/Dockerfile
                 push: true
                 tags: comnyang/dashboard:latest
+            
+            - name: Configure AWS credentials
+              uses: aws-actions/configure-aws-credentials@v4
+              with:
+                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                aws-region: ap-northeast-2
+            
+            - name: Update kubeconfig
+              run: |
+                aws eks update-kubeconfig \
+                  --region ap-northeast-2 \
+                  --name ${{ secrets.EKS_CLUSTER_NAME }}
+            
+            - name: Deploy to EKS
+              run: |
+                kubectl rollout restart deployment dashboard -n dspm
