--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,51 +1,51 @@
-name: Build and Push Dashboard Image
+name: Build and Deploy Dashboard
 
 on:
-    push:
-        branches: [ "main" ]
-        paths:
-            - 'dspm_dashboard/**'
-            - 'Dockerfile'
-            - '.github/workflows/docker-build.yml'
+  push:
+    branches: [ "main" ]
+    paths:
+      - 'dspm_dashboard/**'
+      - 'dspm_dashboard/Dockerfile'
+      - '.github/workflows/docker-build.yml'
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
+  build-and-deploy:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout source
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v4
 
-            - name: Set up docker Buildx
-              uses: docker/setup-buildx-action@v3
-            
-            - name: Log in to DockerHub
-              uses: docker/login-action@v3
-              with:
-                username: ${{ secrets.DOCKERHUB_USERNAME }}
-                password: ${{ secrets.DOCKERHUB_TOKEN }}
-        
-            - name: Build and push
-              uses: docker/build-push-action@v6
-              with:
-                context: ./dspm_dashboard
-                file: ./dspm_dashboard/Dockerfile
-                push: true
-                tags: comnyang/dashboard:latest
-            
-            - name: Configure AWS credentials
-              uses: aws-actions/configure-aws-credentials@v4
-              with:
-                aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                aws-region: ap-northeast-2
-            
-            - name: Update kubeconfig
-              run: |
-                aws eks update-kubeconfig \
-                  --region ap-northeast-2 \
-                  --name ${{ secrets.EKS_CLUSTER_NAME }}
-            
-            - name: Deploy to EKS
-              run: |
-                kubectl rollout restart deployment dashboard -n dspm
+      - name: Set up docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push image
+        uses: docker/build-push-action@v6
+        with:
+          context: ./dspm_dashboard
+          file: ./dspm_dashboard/Dockerfile
+          push: true
+          tags: comnyang/dashboard:latest
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-2
+
+      - name: Update kubeconfig
+        run: |
+          aws eks update-kubeconfig \
+            --region ap-northeast-2 \
+            --name ${{ secrets.EKS_CLUSTER_NAME }}
+
+      - name: Rollout restart dashboard
+        run: |
+          kubectl rollout restart deployment dashboard -n dspm
