--- a/dspm_dashboard/nginx.conf
+++ b/dspm_dashboard/nginx.conf
@@ -1,16 +1,20 @@
 server {
     listen 80;
 
-    location / {
-        root /usr/share/nginx/html;
+    location /dashboard {
+        alias /usr/share/nginx/html;
+        try_files $uri $uri/ /dashboard/index.html;
         index index.html;
-        try_files $uri /index.html;
     }
 
-    location /static {
-        root /usr/share/nginx/html;
+    location /dashboard/static {
+        alias /usr/share/nginx/html/static;
         expires 1y;
         access_log off;
         add_header Cache-Control "public";
+    }
+    
+    location / {
+        return 301 /dashboard/;
     }
 }
