--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -44,7 +44,8 @@ jobs:
         run: |
           aws eks update-kubeconfig \
             --region ap-northeast-2 \
-            --name ${{ secrets.EKS_CLUSTER_NAME }}
+            --name ${{ secrets.EKS_CLUSTER_NAME }} \
+            --role-arn arn:aws:iam::651706765732:role/EksAdminRole
 
       - name: Rollout restart dashboard
         run: |
