--- a/dspm_dashboard/package.json
+++ b/dspm_dashboard/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "/dashboard",
+  "proxy": "http://127.0.0.1:8000",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
