--- a/nginx.conf
+++ b/nginx.conf
@@ -1,32 +1,44 @@
 server {
-    listen 80;
-    server_name localhost;
-    
-    root /usr/share/nginx/html;
-    index index.html;
+    listen 3000;
+    server_name _;
 
-    # 루트(/) 접속시 /dashboard로 리다이렉트 (포트 유지)
+    # 루트 → /dashboard/로 리다이렉트
     location = / {
-        return 301 $scheme://$http_host:3000/dashboard;
+        return 302 /dashboard/;
     }
 
-    # /dashboard 경로 처리
-    location /dashboard {
+    # SPA 엔트리(/dashboard/) - alias 로 문서루트 매핑
+    location /dashboard/ {
         alias /usr/share/nginx/html/;
-        try_files $uri $uri/ /index.html;
         index index.html;
+        # 요청된 파일이 없으면 SPA 엔트리로
+        try_files $uri $uri/ /dashboard/index.html;
     }
 
-    # 정적 파일 처리
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot|json)$ {
+    # 정적 자산: /dashboard/static/*  →  /usr/share/nginx/html/static/*
+    location ^~ /dashboard/static/ {
+        alias /usr/share/nginx/html/static/;
         expires 1y;
         add_header Cache-Control "public, immutable";
     }
 
-    # Gzip 압축
+    # 매니페스트/파비콘도 /dashboard 밑에서 접근 가능하게 별도 alias
+    location = /dashboard/manifest.json {
+        alias /usr/share/nginx/html/manifest.json;
+    }
+    location = /dashboard/favicon.ico {
+        alias /usr/share/nginx/html/favicon.ico;
+    }
+
+    # (옵션) 기타 정적 확장자 캐시
+    location ~* \.(png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
+    # Gzip
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript 
-               application/javascript application/json;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/json;
 }
