--- a/dspm_dashboard/package.json
+++ b/dspm_dashboard/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "/dashboard",
-
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
@@ -24,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start:custom": "cross-env REACT_APP_API_URL=$npm_config_api_url REACT_APP_POLICIES_URL=$npm_config_policies_url REACT_APP_AEGIS_URL=$npm_config_aegis_url REACT_APP_COLLECTOR_URL=$npm_config_collector_url REACT_APP_LINEAGE_URL=$npm_config_lineage_url REACT_APP_AUDIT_URL=$npm_config_audit_url react-scripts start",
+    "build:custom": "cross-env REACT_APP_API_URL=$npm_config_api_url REACT_APP_POLICIES_URL=$npm_config_policies_url REACT_APP_AEGIS_URL=$npm_config_aegis_url REACT_APP_COLLECTOR_URL=$npm_config_collector_url REACT_APP_LINEAGE_URL=$npm_config_lineage_url REACT_APP_AUDIT_URL=$npm_config_audit_url react-scripts build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "cross-env": "^10.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17"
   }
